--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,6 @@
 	"description": "Create a folder, a note inside it, and an inline markdown link - all in one command",
 	"author": "iyioon",
 	"authorUrl": "https://github.com/iyioon",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"fundingUrl": "https://buymeacoffee.com/iyioon",
 	"isDesktopOnly": false
 }
